@@ -9,6 +9,30 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">fiscalyear_form</field>
         </record>
 
+        <record model="ir.ui.view" id="move_line_view_form">
+            <field name="model">account.move.line</field>
+            <field name="inherit" ref="account.move_line_view_form"/>
+            <field name="name">move_line_form</field>
+        </record>
+
+        <record model="ir.ui.view" id="move_line_view_form_move">
+            <field name="model">account.move.line</field>
+            <field name="inherit" ref="account.move_line_view_form_move"/>
+            <field name="name">move_line_form</field>
+        </record>
+
+        <record model="ir.ui.view" id="move_line_view_list">
+            <field name="model">account.move.line</field>
+            <field name="inherit" ref="account.move_line_view_tree"/>
+            <field name="name">move_line_list</field>
+        </record>
+
+        <record model="ir.ui.view" id="move_line_view_list_move">
+            <field name="model">account.move.line</field>
+            <field name="inherit" ref="account.move_line_view_tree_move"/>
+            <field name="name">move_line_list</field>
+        </record>
+
         <record model="ir.ui.view" id="move_line_view_list_payment">
             <field name="model">account.move.line</field>
             <field name="type">tree</field>
