@@ -36,6 +36,7 @@ Create fiscal year::
     ...     create_fiscalyear(company))
     >>> fiscalyear.click('create_period')
     >>> period = fiscalyear.periods[0]
+    >>> period_ids = [p.id for p in fiscalyear.periods]
 
 Create chart of accounts::
 
@@ -49,6 +50,7 @@ Create chart of accounts::
 
 Create tax::
 
+    >>> TaxCode = Model.get('account.tax.code')
     >>> tax = set_tax_code(create_tax(Decimal('.10')))
     >>> tax.save()
     >>> invoice_base_code = tax.invoice_base_code
@@ -168,17 +170,21 @@ Post invoice::
     Decimal('0.00')
     >>> account_tax.credit
     Decimal('20.00')
-    >>> invoice_base_code.reload()
-    >>> invoice_base_code.sum
+    >>> with config.set_context(periods=period_ids):
+    ...     invoice_base_code = TaxCode(invoice_base_code.id)
+    ...     invoice_base_code.sum
     Decimal('200.00')
-    >>> invoice_tax_code.reload()
-    >>> invoice_tax_code.sum
+    >>> with config.set_context(periods=period_ids):
+    ...     invoice_tax_code = TaxCode(invoice_tax_code.id)
+    ...     invoice_tax_code.sum
     Decimal('20.00')
-    >>> credit_note_base_code.reload()
-    >>> credit_note_base_code.sum
+    >>> with config.set_context(periods=period_ids):
+    ...     credit_note_base_code = TaxCode(credit_note_base_code.id)
+    ...     credit_note_base_code.sum
     Decimal('0.00')
-    >>> credit_note_tax_code.reload()
-    >>> credit_note_tax_code.sum
+    >>> with config.set_context(periods=period_ids):
+    ...     credit_note_tax_code = TaxCode(credit_note_tax_code.id)
+    ...     credit_note_tax_code.sum
     Decimal('0.00')
 
 Credit invoice with refund::
@@ -206,17 +212,21 @@ Credit invoice with refund::
     Decimal('20.00')
     >>> account_tax.credit
     Decimal('20.00')
-    >>> invoice_base_code.reload()
-    >>> invoice_base_code.sum
+    >>> with config.set_context(periods=period_ids):
+    ...     invoice_base_code = TaxCode(invoice_base_code.id)
+    ...     invoice_base_code.sum
     Decimal('200.00')
-    >>> invoice_tax_code.reload()
-    >>> invoice_tax_code.sum
+    >>> with config.set_context(periods=period_ids):
+    ...     invoice_tax_code = TaxCode(invoice_tax_code.id)
+    ...     invoice_tax_code.sum
     Decimal('20.00')
-    >>> credit_note_base_code.reload()
-    >>> credit_note_base_code.sum
+    >>> with config.set_context(periods=period_ids):
+    ...     credit_note_base_code = TaxCode(credit_note_base_code.id)
+    ...     credit_note_base_code.sum
     Decimal('200.00')
-    >>> credit_note_tax_code.reload()
-    >>> credit_note_tax_code.sum
+    >>> with config.set_context(periods=period_ids):
+    ...     credit_note_tax_code = TaxCode(credit_note_tax_code.id)
+    ...     credit_note_tax_code.sum
     Decimal('20.00')
 
 Pay invoice::
