@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/notebook/page[@id='info']" position="inside">
+        <label name="invoice_payment"/>
+        <field name="invoice_payment"/>
+    </xpath>
+</data>
